# vup.json

./: README.md  avatar.py  main.py  pyproject.toml  requirements.txt  vup-desc.json  vup.json
.github/workflows/: build.yml
