[tool.poetry]
name = "vup.json"
version = "0.1.0"
description = "Extract bilibili vup info from vtbs.moe"
authors = ["Tunghsiao Liu <t@sparanoid.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
